--- a/Billard.cbp
+++ b/Billard.cbp
@@ -48,6 +48,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="struct.h" />
+		<Unit filename="wall.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="wall.h" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
